Revert "Logout endpoint"

--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -6,6 +6,5 @@
     
 {% endblock %}
 {% block content %}
-    <h2 class="text-2xl">APP/INDEX</h2>
-    <h4>Hello, <span class="text-red-400">{{ current_user.get_full_name() }}</span></h4>
+    APP/INDEX
 {% endblock %}
