refactored the code to support dynamic general confog files, fixed circular import issues, fixed project not found error when running single files for testing by adding a script to register project directory in config.py, added endpoint for generation with openai chat completion. Yet to build out the pages and accept input from the end points, model tailwind-css to project folder instead of base directory and added the blueprint parts individually to tailwind config

--- a/project/app/templates/app/newpost.html
+++ b/project/app/templates/app/newpost.html
@@ -7,11 +7,45 @@
 {% for message in messages %}
     <h2>{{ message }}</h2>
 {% endfor %}
-    <form action="{{ url_for('app.generate') }}" method="post">
+    <!-- <form action="{{ url_for('app.generate') }}" method="post">
         <label for="keyword">Keyword</label><br>
         <input type="text" class="border-2" name="keyword"><br>
         <label for="link">Link</label><br>
         <input type="text" class="border-2" name="link"><br>
         <button type="submit" class="mt-4 border-2 rounded px-4 py-2">Generate</button>
-    </form>
+    </form> -->
+    <div>
+        <input type="text" id="uinput">
+        <button id="button">Fetch stream</button>
+    </div>
+    <div id="content">
+    
+    </div>
+    
+    
+    <script>
+        const button = document.getElementById('button');
+        const content = document.getElementById('content');
+        const uinput = document.getElementById('uinput');
+
+        button.addEventListener('click', async function (e) {
+            const response = await fetch('/app/generate', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ message: uinput.value })
+            });
+            const reader = response.body.getReader();
+            let output = "";
+
+            while (true) {
+                const { done, value } = await reader.read();
+                output += new TextDecoder().decode(value);
+                content.innerText = output;
+
+                if (done) {
+                    return
+                }
+            }
+        });
+    </script>
 {% endblock content %}
