--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -14,7 +14,8 @@
 {% block content %}
     <div class="h-full w-full bg-slate-50">
         <div class="h-full max-w-7xl mx-auto p-2 md:py-10">
-            <div class="md:grid h-full md:grid-cols-[17rem_1fr] lg:grid-cols-[23rem_1fr] md:gap-1 lg:gap-2 rounded-md overflow-auto bg-gray-100">
+            <!-- for full screen add h-full to the div below -->
+            <div class="md:grid md:grid-cols-[17rem_1fr] lg:grid-cols-[23rem_1fr] md:gap-1 lg:gap-2 rounded-md overflow-auto bg-gray-100">
                 <div class="w-full md:overflow-auto pb-2">
                     <h2 class="text-xl font-semibold px-6 py-2 md:mt-4">Article Generator</h2>
                     <div class="mt-2">
