--- a/project/core/templates/core/index.html
+++ b/project/core/templates/core/index.html
@@ -7,4 +7,7 @@
 {% endblock %}
 {% block content %}
     CORE/INDEX
+    <a href="{{ url_for('app.signin') }}">
+        <h3 class="text-2xl text-center">SIGN IN</h3>
+    </a>
 {% endblock %}
