--- a/project/app/templates/app/base2.html
+++ b/project/app/templates/app/base2.html
@@ -28,8 +28,7 @@
                 <div class="flex items-center gap-4">
                     <div class="flex justify-center items-center gap-3">
                         <div class="h-8 aspect-square bg-transparent">
-                            <img src="{{ url_for('core.static', filename='core/img/blogai-logo.jpeg' ) }}" alt=""
-                                class="h-8 aspect-square rounded-full">
+                            <img src="{{ url_for('core.static', filename='core/img/blogai-logo.jpeg' ) }}" alt="" class="h-8 aspect-square rounded-full">
                         </div>
                         <h3>BLOGAI</h3>
                     </div>
