--- a/project/app/templates/app/index.html
+++ b/project/app/templates/app/index.html
@@ -17,16 +17,16 @@
             <!-- for full screen add h-full to the div below -->
             <div class="md:grid md:grid-cols-[17rem_1fr] lg:grid-cols-[23rem_1fr] md:gap-1 lg:gap-2 rounded-md overflow-auto bg-gray-100">
                 <div class="w-full md:overflow-auto pb-2">
-                    <h2 class="text-xl font-semibold px-6 py-2 md:mt-4">Article Generator</h2>
+                    <h2 class="text-xl font-semibold px-6 py-2 md:mt-4">Social Media Post Generator</h2>
                     <div class="mt-2">
                         <div class="px-4 lg:px-6 py-1">
                             <label for="link1" class="block mb-1 text-sm font-semibold text-slate-700">Link one:</label>
                             <input type="text" name="link1" class="w-full border text-slate-600 border-slate-300 focus:ring-1 focus:ring-slate-600 outline-none rounded-md px-2 py-1 text-sm" placeholder="https://www.example.com">
                         </div>
-                        <div class="px-4 lg:px-6 py-1">
+                        <!-- <div class="px-4 lg:px-6 py-1">
                             <label for="link2" class="block mb-1 text-sm font-semibold text-slate-700">Link one:</label>
                             <input type="text" name="link2" class="w-full border text-slate-600 border-slate-300 focus:ring-1 focus:ring-slate-600 outline-none rounded-md px-2 py-1 text-sm" placeholder="https://www.example.com">
-                        </div>
+                        </div> -->
                         <div class="px-4 lg:px-6 py-1 mt-4 md:mt-6">
                             <button class="px-4 py-2 border rounded-md ring-1 ring-slate-300 hover:bg-slate-300" id="generateButton">Generate</button>
                         </div>
