--- a/project/app/templates/app/signin.html
+++ b/project/app/templates/app/signin.html
@@ -34,7 +34,7 @@
                 <button type="submit" class="w-full mt-6 mb-4 bg-slate-100 border-2 rounded px-2 py-1 block hover:bg-slate-300">Sign in</button>
             </form>
             <div class="mx-auto text-center mb-6">
-                <p class="text-gray-500">Don't have an account? <a href="{{ url_for('app.signup') }}" class="text-gray-600 underline underline-offset-4 font-semibold hover:text-gray-800">Sign in</a></p>
+                <p class="text-gray-500">Don't have an account? <a href="{{ url_for('app.signup') }}" class="text-gray-600 underline underline-offset-4 font-semibold hover:text-gray-800">Sign up</a></p>
             </div>
         </div>
     </div>
