--- a/project/app/templates/app/signup.html
+++ b/project/app/templates/app/signup.html
@@ -51,7 +51,7 @@
                     <div class="flex justify-between">
                         <label for="confirm-password" class="font-semibold text-[.95rem]">Confirm password</label>
                     </div>
-                    <input type="text" class="w-full outline-none bg-slate-50 ring-1 ring-slate-200 focus:ring-slate-400 rounded-sm px-2 py-2 mt-2 text-sm" name="cpassword" id="cpassword" placeholder="Enter your confirm-password" required>
+                    <input type="text" class="w-full outline-none bg-slate-50 ring-1 ring-slate-200 focus:ring-slate-400 rounded-sm px-2 py-2 mt-2 text-sm" name="cpassword" id="cpassword" placeholder="Confirm password" required>
                     {% for message in messages %}
                         {% if message['c_password'] %}
                             <p class="text-red-600 text-sm mt-2">{{ message['c_password'] }}</p>
